Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-50284

[BP 6.6.5] - Eventing: Handler stuck in pausing state after online upgrade and enforcing TLS

    XMLWordPrintable

Details

    Description

      STEPS

      1. Cluster consists of 3 nodes (data, data + eventing, index + query) running on 6.6.4-9961.
      2. Create 3 eventing handlers namely bucket_op, timers and n1ql.
      3. Deploy all 3 handlers, load docs into source bucket and verify mutations are processed or not.
      4. Perform online upgrade of the cluster to 6.6.5 - 10072.
      5. Create and deploy 4th handler.
      6. Disable auto failover, enable n2n encryption and Enforce TLS.
      7. Pause all 4 eventing handlers.

      OBSERVATION
      timers handler is stuck in pausing state.

      curl -XGET -k https://Administrator:password@172.23.106.74:18096/api/v1/status
      {
       "apps": [
        {
         "composite_status": "paused",
         "name": "bucket_op",
         "num_bootstrapping_nodes": 0,
         "num_deployed_nodes": 1,
         "deployment_status": true,
         "processing_status": false,
         "redeploy_required": false
        },
        {
         "composite_status": "paused",
         "name": "n1ql",
         "num_bootstrapping_nodes": 0,
         "num_deployed_nodes": 1,
         "deployment_status": true,
         "processing_status": false,
         "redeploy_required": false
        },
        {
         "composite_status": "pausing",
         "name": "timers",
         "num_bootstrapping_nodes": 0,
         "num_deployed_nodes": 1,
         "deployment_status": true,
         "processing_status": false,
         "redeploy_required": false
        },
        {
         "composite_status": "paused",
         "name": "test",
         "num_bootstrapping_nodes": 0,
         "num_deployed_nodes": 1,
         "deployment_status": true,
         "processing_status": false,
         "redeploy_required": false
        }
       ],
       "num_eventing_nodes": 1
      }
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sujay.gad Sujay Gad
              sujay.gad Sujay Gad
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty